Fix small gap above question type label

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -400,7 +400,7 @@
                         justify-content: space-between;
                         max-width: fit-content;
                         margin-inline: auto;
-                        padding: 6px;
+                        padding: 5px;
                         margin-top: -35px;
                         border-radius: 0px @variables_radius 0px 0px;
                         display: flex !important;
